Issue #3339301: Remove title truncation (ellipsis) or make titles longer in edit mode

--- a/styles/components/edit_form.scss
+++ b/styles/components/edit_form.scss
@@ -62,7 +62,6 @@
       .page-title {
         @include mq(large) {
           width: auto;
-          max-width: 800px;
           margin: 0;
           overflow: hidden;
         }
